TAG: qcreports_db-5-0-0-18
TAG: qcreports_db-5-0-0-17
DATE: 07/10/2012
STAFF: lec
CHANGES: 
1) TR11117/GXD_ImagePanes.py; move from monthly to daily (mgd directory)

TAG: qcreports_db-5-0-0-16
DATE: 06/19/2012
STAFF: lec
CHANGES: 
1) TR11035/postgres cleanup/GXD_Stats.py

TAG: qcreports_db-5-0-0-15
DATE: 06/19/2012
STAFF: lec
CHANGES: 
1) T11110
mgd/PRB_StrainByDate.sql
mgd/MLP_Nomenclature.sql

TAG: qcreports_db-5-0-0-14
DATE: 06/18/2012
STAFF: lec
CHANGES: 
1) PRB_StrainPrivate.py

TAG: qcreports_db-5-0-0-13
DATE: 06/11/2012
STAFF: lec
CHANGES: 
1) GXD_FullCodeable.py (GXD_FullCodable3)
2) GXD_OneGenePapers.py
3) GXD_EarlyEmbPapers.py
4) GXD_FullCode.py (GXD_DevBiolandDevelopment, GXD_DevDyn)

TAG: qcreports_db-5-0-0-12
DATE: 06/05/2012
STAFF: lec
CHANGES: 
1) GXD_Stats.py; fix bug

TAG: qcreports_db-5-0-0-11
DATE: 05/24/2012
STAFF: lec
CHANGES: 
1) GXD_SpecTheiler.sql fix (from postgres cleanup)

TAG: qcreports_db-5-0-0-10
DATE: 05/22/2012
STAFF: lec
CHANGES: 
1) RECOMB_SpecTheiler.sql; fix bug

TAG: qcreports_db-5-0-0-9
DATE: 05/21/2012
STAFF: lec
CHANGES: 
1) GXD_NonGeneMarkers.py; fix row count

TAG: qcreports_db-5-0-0-8
DATE: 05/16/2012
STAFF: lec
CHANGES: 
1) GXD_SpecTheiler.sql fix

TAG: qcreports_db-5-0-0-7
DATE: 05/15/2012
STAFF: lec
CHANGES: 
1) TR11062/GXD_SpecNoAge.sql

TAG: qcreports_db-5-0-0-6
TAG: qcreports_db-5-0-0-5
TAG: qcreports_db-5-0-0-4
DATE: 05/01/2012-05/15/2012
STAFF: lec
CHANGES: 
1) TR11035/postgres cleanup
- unique index names
- add "try...except" block
2) TR11066/GXD_GelBand.sql

TAG: qcreports_db-5-0-0-3
DATE: 04/23/2012
STAFF: lec
CHANGES: 
1) TR11040/monthly/GXD_ImagePanes.py;exclude x,y,width,height = null

TAG: qcreports_db-5-0-0-2
DATE: 04/09/2012
STAFF: lec
CHANGES: 
1) TR 11029/mgd/GO_Combined_Report.py

TAG: qcreports_db-5-0-0-1
DATE: 04/05/2012
STAFF: lec
CHANGES: 
1) TR11028/mgd/PRB_StrainByDate.sql

TAG: qcreports_db-4-4-2-15
DATE: 03/27/2012
STAFF: lec
CHANGES: 
1) mgd/BIB_RefsToIndex.py; fix pubmedID
