@@ -163,7 +163,6 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/archive/go">Archive of GO Statistics</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_GOUnknown.sql.rpt">All genes with 'unknown' annotations with new indexed literature</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GO_done.mgi">"Done" Genes with Literature</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GO_done_newlit.mgi">"Done" Genes with New Literature</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GO_NotGene.sql.rpt">Non-Gene Markers with GO Annotations</A>
 <LI><A HREF="/data/reports/qcreports_db/output/VOC_GOObsolete.rpt">Markers with Annotations to Obsolete GO Terms</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_GORCA.html">Genes with GO Annotations of evidence RCA only and with references that are selected for GO but have not been used</A>
